--- a/angular.json
+++ b/angular.json
@@ -12,12 +12,12 @@
       },
       "root": "",
       "sourceRoot": "src",
-      "prefix": "app",
+      "prefix": "eComm-app",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/shopping-app",
+            "outputPath": "dist/eComm-app",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
@@ -70,14 +70,14 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "Shopping-app:build"
+            "browserTarget": "eComm-app:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "Shopping-app:build:production"
+              "browserTarget": "eComm-app:build:production"
             },
             "development": {
-              "browserTarget": "Shopping-app:build:development"
+              "browserTarget": "eComm-app:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -85,7 +85,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "Shopping-app:build"
+            "browserTarget": "eComm-app:build"
           }
         },
         "test": {
